Fixed yellow, and centring of timer element

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -42,14 +42,14 @@
           </h3>
         </div>
       </div>
-      <div class="panel">
-        <div id="middle-panel" class="panel-content">
+      <div id="middle-panel" class="panel">
+        <div class="panel-content">
           <p>
             <i>Weniger aber besser</i>
           </p>
           <div id="datetime">
-            <h3 id="time"></h3>
-            <h3 id="date"></h3>
+            <h3 id="time">&nbsp;</h3>
+            <h3 id="date">&nbsp;</h3>
             <script>
               `use strict`;
               function refreshTime() {
